# test_rich

./: .gitignore  pyoxidizer-package.sh  pyoxidizer.bzl  pyproject.toml
test_rich/: main.py
tests/: test_test_rich.py
