[tool.poetry]
name = "test_rich"
version = "0.1.0"
description = ""
authors = ["gtxx"]

[tool.poetry.dependencies]
python = "^3.8"
rich = "^9.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
test_rich = 'test_rich.main:print_table'
